General: Fixed background color not rendering properly on mobile.

--- a/SumItUp/wwwroot/css/calculator.css
+++ b/SumItUp/wwwroot/css/calculator.css
@@ -142,6 +142,7 @@
 
 body {
     background: linear-gradient(135deg, #1A1A1A 0%, #333333 100%);
+    height: 100vh;
 }
 
 .calculator {
